@@ -29,7 +29,7 @@ import org.springframework.util.StringUtils;
 
 import java.io.File;
 import java.net.InetAddress;
-import java.net.URL;
+import java.net.URI;
 import java.time.Instant;
 import java.util.*;
 import java.util.function.Consumer;
@@ -94,6 +94,8 @@ public class BookMetadataUpdater {
         boolean convertCbrCb7ToCbz = settings.isConvertCbrCb7ToCbz();
         BookFileType bookType = bookEntity.getBookType();
 
+        boolean hasValueChangesForFileWrite = MetadataChangeDetector.hasValueChangesForFileWrite(newMetadata, metadata, clearFlags);
+
         updateBasicFields(newMetadata, metadata, clearFlags, replaceMode);
         updateAuthorsIfNeeded(newMetadata, metadata, clearFlags, mergeCategories, replaceMode);
         updateCategoriesIfNeeded(newMetadata, metadata, clearFlags, mergeCategories, replaceMode);
@@ -111,7 +113,6 @@ public class BookMetadataUpdater {
             log.warn("Failed to calculate metadata match score for book ID {}: {}", bookId, e.getMessage());
         }
 
-        boolean hasValueChangesForFileWrite = MetadataChangeDetector.hasValueChangesForFileWrite(newMetadata, metadata, clearFlags);
         if ((writeToFile && hasValueChangesForFileWrite) || thumbnailRequiresUpdate) {
             metadataWriterFactory.getWriter(bookType).ifPresent(writer -> {
                 try {
@@ -401,8 +402,8 @@ public class BookMetadataUpdater {
 
     private boolean isLocalOrPrivateUrl(String url) {
         try {
-            URL parsed = new URL(url);
-            String host = parsed.getHost();
+            URI uri = new URI(url);
+            String host = uri.getHost();
             if ("localhost".equalsIgnoreCase(host) || "127.0.0.1".equals(host)) return true;
             InetAddress addr = InetAddress.getByName(host);
             return addr.isLoopbackAddress() || addr.isSiteLocalAddress();
